unpackaged/main/default/objects/Partner_Notification__c/Partner_Notification__c.object-meta.xml
<CustomObject>
    <label>Partner Notification</label>
    <nameField>
        <label>Partner Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>