unpackaged/main/default/objects/Partner_Notification__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a Day</fullName>
            </value>
            <value>
                <fullName>Once a Week</fullName>
            </value>
            <value>
                <fullName>Once a Month</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>