unpackaged/main/default/objects/Partner_Notification__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <formula>Email__c &amp; " (" &amp; TEXT(Frequency__c) &amp; ")"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label</label>
    <type>Text</type>
</CustomField>