unpackaged/main/default/objects/Partner_Notification__c/fields/Needs_Email__c.field-meta.xml
<CustomField>
    <fullName>Needs_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Email</label>
    <type>Checkbox</type>
</CustomField>