unpackaged/main/default/objects/Partner_Notification__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partner Notifications</relationshipLabel>
    <relationshipName>Partner_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>